# ox-delivery

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CAC_test_results.txt  CAC_test_results.txt~  CAC_tourLines.txt  CRC_test_results.txt  CRC_test_results_Jan26.txt  F  FxRes  README  ShowTourLines.py  all_results.txt  builder.sh  clean_all.sh  convert_install_path.sh  copy_scripts_from_leo.sh  f  force_bash.sh  gen_tests.sh  gen_tests_out.tar.xz  oxdel.rviz  oxdel4.rviz  remove_gedit_files.sh  run_all.sh  test.pt  test_CRCcave.png.txt  test_CRCgreg_cottage.png.txt  test_CRCmulticell.png.txt  test_CRCoffice.png.txt  tourLines.txt
BCD_libs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  run.sh
BCD_libs/include/: BCD.h  DrawImage.h  OpenImage.h
BCD_libs/src/: BCD.cpp  DrawImage.cpp  OpenImage.cpp
CPP_libs/: BensonKE_ChinesePostman.conf  CMakeCache.txt  CMakeLists.txt  ChinesePostmanConfig.cmake  Makefile  clean.sh  cmake_install.cmake  install_manifest.txt
CPP_libs/CMAKE_MODULES/: FindGLPK.cmake
CPP_libs/include/: ChinesePostman.h  DrawImage.h
CPP_libs/src/: ChinesePostman.cpp  DrawImage.cpp
FEB25RESULTS 2017/: CAC_res.txt  CRC_res.txt  Equal_part_res.txt  all_results.txt
FEB25RESULTS 2017/final?/: cave.png_test_results.txt  greg_cottage.png_test_results.txt  multicell.png_test_results.txt  office.png_test_results.txt
KCPP/: .notes.swp  BensonKE_KCPP.conf  CMakeCache.txt  CMakeLists.txt  KCPPConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
KCPP/include/: CAC.h  FredericksonKCPP.h  KChinesePostmen.h  NRC.h
KCPP/src/: CAC.cpp  FredericksonKCPP.cpp  KChinesePostmen.cpp  NRC.cpp
Leo_libs/: CMakeCache.txt  CMakeLists.txt  Makefile  clean.sh  cmake_install.cmake  install_manifest.txt
Leo_libs/include/: Point2D.h  ReebGraph.h  RegionData.h
Leo_libs/src/: Point2D.cpp  ReebGraph.cpp  RegionData.cpp
ShowTourLines/: ShowTourLines.py
UseLibs/: Makefile  UseLibs  UseLibs.pro  clean.sh  libs.txt  moc_controller.cpp  run.sh  run.sh.bk  singleRun  test
UseLibs/include/: controller.h  main.h
UseLibs/inputs/: Compare_1.map.xcf  Compare_1.wf  Compare_1_expand.py  Compare_1_expand.sh  greg_cottage_map.wf  img1.wf  square-b.wf  sum.py
UseLibs/src/: controller.cpp  main.cpp
WayPoints_libs/: BensonKE_WayPoints.conf  CMakeCache.txt  CMakeLists.txt  Makefile  WayPointsConfig.cmake  cmake_install.cmake  install_manifest.txt  run.sh
WayPoints_libs/include/: DrawImage.h  WayPoints.h
WayPoints_libs/src/: DrawImage.cpp  WayPoints.cpp
catkin_ws/: clean.sh  fix_links.sh  run.sh
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/efficient_coverage/: efficient_coverage
catkin_ws/devel/lib/pkgconfig/: efficient_coverage.pc
catkin_ws/devel/share/efficient_coverage/cmake/: efficient_coverageConfig.cmake
catkin_ws/install/: setup.sh
catkin_ws/install/lib/pkgconfig/: efficient_coverage.pc
catkin_ws/install/share/efficient_coverage/cmake/: efficient_coverageConfig.cmake
catkin_ws/src/: nav2d_navigator.tar.xz
catkin_ws/src/efficient_coverage/: CMakeLists.txt  install_manifest.txt  package.xml  run.sh
catkin_ws/src/efficient_coverage/src/: efficient_coverage.cpp
catkin_ws/src/efficient_coverage/world/: img0.world  img1.world  img2.world  img3.world  img5.world
catkin_ws/src/efficient_coverage_py/: CMakeLists.txt  generate_launch_files.sh  inputs  package.xml  stageworld.vim  template.py  update_scale.sh
catkin_ws/src/efficient_coverage_py/inputs/: ii.wf  img1 (copy).wf  world1.wf
catkin_ws/src/efficient_coverage_py/launch/: efficient_coverage.launch.template  efficient_coverage_1.launch  efficient_coverage_2.launch  efficient_coverage_3.launch  efficient_coverage_4.launch  efficient_coverage_5.launch  efficient_coverage_6.launch  efficient_coverage_7.launch  efficient_coverage_8.launch  efficient_coverage_four.launch  efficient_coverage_four_cac.launch  efficient_coverage_single.launch  test_world.launch  tutorial2.launch
catkin_ws/src/efficient_coverage_py/maps/: Compare_1.yaml  Compare_1.yaml.template  greg_cottage_map.yaml  greg_cottage_map.yaml.template  img2.yaml  img2.yaml.template
catkin_ws/src/efficient_coverage_py/param/: costmap_0.yaml  costmap_1.yaml  costmap_2.yaml  costmap_3.yaml  navigator.yaml  operator.yaml
catkin_ws/src/efficient_coverage_py/scripts/: DEBUG_tourLines.txt  cmd_filter.py  efficient_coverage.py  passthru_operator.py  static_map_tee_server.py
catkin_ws/src/efficient_coverage_py/world/: Compare_1.world  Compare_1.world.template  greg_cottage_map.world  greg_cottage_map.world.template  img2.world  img2.world.template  img4.world
catkin_ws/src/efficient_coverage_py/world/bitmaps/: normalize_images.py
current_experiments/: CRC.txt
scripts/: plot.py  plotDistanceRobots.m  plotchart.py  plothistogram.py  run_tests.py  utilizationPlot.py
